[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[project]
name = "accounting-service"
description = "Accounting Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic>=2",
    "pydantic-settings>=2.2.1",
    "uvicorn[standard]",
]
dynamic = ["version"]


[project.optional-dependencies]
cli = [
    "click",
]


[tool.setuptools_scm]


[tool.black]
line-length = 100
target-version = ['py312']
include = 'src/.*\.py$|tests/.*\.py$|doc/source/conf\.py$|setup\.py$'


[tool.isort]
profile = "black"
line_length = 100


[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
# TODO: remove rules not to be ignored
ignore = [
    'ANN',     # No annotations
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    'S101',    # Use of 'assert' detected
    'N802',    # function name should be lowercase
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
# Maximum number of arguments for function / method
max-args = 8
# Maximum number of locals for function / method body
max-locals = 15
# Maximum number of return / yield for function / method body
max-returns = 6
# Maximum number of branch for function / method body
max-branches = 12
# Maximum number of statements in function / method body
max-statements = 50
# Maximum number of public methods for a class (see R0904).
max-public-methods = 60


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]


[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.run]
branch = true
parallel = false

[tool.coverage.report]
show_missing = true
precision = 0
# TODO: increase threshold
fail_under = 20
